public interface Spreadable {
    public void spread();
}
