public interface Noisable {
    public void makeNoise();
}
